Componenent details button created to factorized the code

--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -20,13 +20,7 @@
 				<div class="row">
 					<div class="col-md-4">Projets</div>
 					<div class="col-md-4 offset-md-4">
-						<button
-							type="button"
-							class="btn btn-info btn-sm float-right"
-							[routerLink]="['/global-reporting', 'projects']"
-						>
-							Détails
-						</button>
+						<app-details-button [routerLink]="['/global-reporting', 'projects']"></app-details-button>
 					</div>
 				</div>
 			</nb-card-header>
@@ -48,13 +42,7 @@
 				<div class="row">
 					<div class="col-md-4">Factures</div>
 					<div class="col-md-4 offset-md-4">
-						<button
-							type="button"
-							class="btn btn-info btn-sm float-right"
-							[routerLink]="['/global-reporting', 'invoices']"
-						>
-							Détails
-						</button>
+						<app-details-button [routerLink]="['/global-reporting', 'invoices']"></app-details-button>
 					</div>
 				</div>
 			</nb-card-header>
@@ -71,13 +59,7 @@
 				<div class="row">
 					<div class="col-md-4">Tickets</div>
 					<div class="col-md-4 offset-md-4">
-						<button
-							type="button"
-							class="btn btn-info btn-sm float-right"
-							[routerLink]="['/global-reporting', 'tickets']"
-						>
-							Détails
-						</button>
+						<app-details-button [routerLink]="['/global-reporting', 'tickets']"></app-details-button>
 					</div>
 				</div>
 			</nb-card-header>
