Customer page opened by Global search with a parameter (customer name)

--- a/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
+++ b/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
@@ -7,7 +7,7 @@
 		[ngStyle]="{'grid-column-start':'1', 'grid-column-end':'3',
 						'grid-row-start':'1', 'grid-row-end':'2'}"
 	>
-		header
+		{{this.customerName}}
 	</div>
 
 	<div
@@ -277,7 +277,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-8 h-100">
-						<app-tickets-chart>	</app-tickets-chart>
+						<app-tickets-chart> </app-tickets-chart>
 					</div>
 				</div>
 			</nb-card-body>
