--- a/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
+++ b/src/features/customer-reporting/dashboard/pages/customer-reporting-dashboard.page.html
@@ -1,5 +1,5 @@
 <div
-	class="customer-reporting w-100 h-100 overflow-hidden"
+	class="customer-reporting-dashboard w-100 h-100 overflow-hidden"
 	[ngStyle]="{'display':'grid', 'grid-template-columns':'50% 50%', 'grid-template-rows':'7% 45% 15% 30%', 'grid-gap': '0.5vh 0.5vw'}"
 >
 	<div
