--- a/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
+++ b/src/features/global-reporting/dashboard/pages/global-reporting-dashboard.page.html
@@ -1,4 +1,4 @@
-<div class="global-reporting w-100 h-100">
+<div class="global-reporting-dashboard w-100 h-100">
 	<div class="consumption">
 		<nb-card class="w-100 h-100">
 			<nb-card-header>Consommation</nb-card-header>
